# sonaris

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  entrypoint.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
.trunk/: trunk.yaml
etc/: build.py  build.sh  env.py  environment.sh  info.yml  run_image.sh  setup.sh
examples/: simple_waveform.yaml  test.yaml  waveform_experiment.yaml
frontend/: app.py  startup.sh  wsgi.py
frontend.legacy/: app.py
frontend.legacy/src/: callbacks.py  routine.py
frontend.legacy/src/features/: scheduler.py  state_managers.py
frontend.legacy/src/pages/: dashboard.py  dev.py  factory.py  home.py
frontend/assets/: responsive-sidebar.css  tailwind.css
frontend/src/: callbacks.py  header.py
frontend/src/features/: managers.py  state_managers.py  task_decorator.py  task_validator.py  tasks.py
frontend/src/generic/: naming.py
frontend/src/pages/: dashboard.py  dg4202.py  experiment.py  factory.py  general.py  home.py  monitor.py  plotter.py  scheduler.py  settings.py  templates.py
frontend/src/widgets/: device_monitor.py  dg_default.py  (+22 more)
notebooks/: test_device.ipynb
src/: pytest.ini
src/api/: dg4202_api.py
src/device/: data.py  device.py  dg4202.py  edux1002a.py  interface.py  state_machine.py
src/scheduler/: functionmap.py  timekeeper.py  worker.py
src/sonaris/: __main__.py  app.py  defaults.py  factory.py
src/test/: test_dg4202.py  test_dg4202_api.py  test_dg4202_mock.py  test_hardware_conn.py  test_interface.py  test_ui_factory.py
src/utils/: logging.py
(+47 files in other folders)
